included collision detection for convex shapes

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       canvasEl.width = window.innerWidth;
       ctx = canvasEl.getContext("2d");
       as = new Asteroids.Asteroid({radius: 100}, [120,200]);
+      bs = new Asteroids.Asteroid({radius: 50}, [120,200]);
       // as.draw(canvasEl.getContext("2d"));
       // gameview = new Asteroids.GameView(canvasEl.getContext("2d"));
       // gameview.start();
