--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="./stylesheet/application.css">
     <script src = "./vendor/keymaster.js"></script>
     <script src = "./javascript/util/array_patch.js"></script>
     <script src = "./javascript/util/number_patch.js"></script>
@@ -14,18 +15,42 @@
     <script src = "./javascript/objects/moving_object.js"></script>
     <script src = "./javascript/objects/particle.js"></script>
     <script src = "./javascript/objects/asteroid.js"></script>
+    <script src = "./javascript/demo/demo.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 
   </head>
   <body style="margin: 0px;">
     <canvas style="background-color: #000000;"></canvas>
+    <div class="new">
+      <label for=radius>Radius:</label>
+      <input type=range min=25 max=500 value=25 id=radius>
+      <span class="preview" id="radius_preview">25</span>
+      <label for=radius>Atoms:</label>
+      <input type=range min=25 max=2000 value=25 id=atoms>
+      <span class="preview" id="atoms_preview">25</span>
+      <button class="create">Create Asteroid</button>
+    </div>
     <script>
       canvasEl = document.getElementsByTagName("canvas")[0];
       canvasEl.height = window.innerHeight;
       canvasEl.width = window.innerWidth;
       ctx = canvasEl.getContext("2d");
+      $(function(){
+        new Demo();
+      })
       as = new Asteroids.Asteroid({radius: 100}, [120,200]);
       bs = new Asteroids.Asteroid({radius: 50}, [120,200]);
-      // as.draw(canvasEl.getContext("2d"));
+      function getMousePos(canvas, evt) {
+        var rect = canvas.getBoundingClientRect();
+        return {
+          x: evt.clientX - rect.left,
+          y: evt.clientY - rect.top
+        };
+      }
+      canvasEl.addEventListener('mousemove', function(evt) {
+       var mousePos = getMousePos(canvasEl, evt);
+       console.log(mousePos);
+     })
       // gameview = new Asteroids.GameView(canvasEl.getContext("2d"));
       // gameview.start();
     </script>
