added movement of demo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body style="margin: 0px;">
     <canvas style="background-color: #000000;"></canvas>
-    <div class="new">
+    <form class="new">
       <label for=radius>Radius:</label>
       <input type=range min=25 max=500 value=25 id=radius>
       <span class="preview" id="radius_preview">25</span>
@@ -29,28 +29,24 @@
       <input type=range min=25 max=2000 value=25 id=atoms>
       <span class="preview" id="atoms_preview">25</span>
       <button class="create">Create Asteroid</button>
-    </div>
+    </form>
     <script>
-      canvasEl = document.getElementsByTagName("canvas")[0];
-      canvasEl.height = window.innerHeight;
-      canvasEl.width = window.innerWidth;
-      ctx = canvasEl.getContext("2d");
       $(function(){
         new Demo();
       })
-      as = new Asteroids.Asteroid({radius: 100}, [120,200]);
-      bs = new Asteroids.Asteroid({radius: 50}, [120,200]);
-      function getMousePos(canvas, evt) {
-        var rect = canvas.getBoundingClientRect();
-        return {
-          x: evt.clientX - rect.left,
-          y: evt.clientY - rect.top
-        };
-      }
-      canvasEl.addEventListener('mousemove', function(evt) {
-       var mousePos = getMousePos(canvasEl, evt);
-       console.log(mousePos);
-     })
+      // as = new Asteroids.Asteroid({radius: 100}, [120,200]);
+      // bs = new Asteroids.Asteroid({radius: 50}, [120,200]);
+    //   function getMousePos(canvas, evt) {
+    //     var rect = canvas.getBoundingClientRect();
+    //     return {
+    //       x: evt.clientX - rect.left,
+    //       y: evt.clientY - rect.top
+    //     };
+    //   }
+    //   canvasEl.addEventListener('mousemove', function(evt) {
+    //    var mousePos = getMousePos(canvasEl, evt);
+    //    console.log(mousePos);
+    //  })
       // gameview = new Asteroids.GameView(canvasEl.getContext("2d"));
       // gameview.start();
     </script>
